fixed typos in strings

--- a/collect_app/src/main/res/layouts/fieldsight/layout/create_site_form.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/create_site_form.xml
@@ -37,7 +37,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="name"
+            android:hint="Name"
             android:inputType="text"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
     </com.google.android.material.textfield.TextInputLayout>
