--- a/collect_app/src/main/res/layouts/fieldsight/layout/fieldsight_reset_dialog_layout.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fieldsight_reset_dialog_layout.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2017 Nafundi
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2017 Nafundi
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -13,8 +12,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
@@ -23,55 +21,54 @@ limitations under the License.
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
 
 
         <CheckBox
-            android:visibility="gone"
             android:id="@+id/instances"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/reset_saved_forms"
-            android:padding="5dp"
-            android:button="@null"
             android:background="?android:attr/selectableItemBackground"
+            android:button="@null"
             android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-            android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
+            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
+            android:padding="5dp"
+            android:text="@string/reset_saved_forms"
+            android:visibility="gone" />
 
         <CheckBox
-            android:visibility="gone"
             android:id="@+id/forms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/reset_blank_forms"
-            android:padding="5dp"
-            android:button="@null"
             android:background="?android:attr/selectableItemBackground"
+            android:button="@null"
             android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-            android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
+            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
+            android:padding="5dp"
+            android:text="@string/reset_blank_forms" />
 
         <CheckBox
             android:id="@+id/flagged_forms"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/reset_flagged_forms"
-            android:padding="5dp"
-            android:button="@null"
             android:background="?android:attr/selectableItemBackground"
+            android:button="@null"
             android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-            android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
+            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
+            android:padding="5dp"
+            android:text="@string/reset_flagged_forms" />
 
         <CheckBox
             android:id="@+id/cache"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/reset_cache"
-            android:padding="5dp"
-            android:button="@null"
             android:background="?android:attr/selectableItemBackground"
+            android:button="@null"
             android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
-            android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
+            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
+            android:padding="5dp"
+            android:text="@string/reset_cache" />
 
 
     </LinearLayout>
