--- a/collect_app/src/main/res/layouts/fieldsight/layout/layout_text_input.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/layout_text_input.xml
@@ -1,13 +1,12 @@
-<com.google.android.material.textfield.TextInputLayout
+<com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text_input_layout"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_large"
-    android:layout_marginTop="4dp"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_marginTop="4dp">
 
     <com.google.android.material.textfield.TextInputEditText
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 </com.google.android.material.textfield.TextInputLayout>
