--- a/collect_app/src/main/res/layouts/fieldsight/layout/main_toolbar.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/main_toolbar.xml
@@ -1,23 +1,20 @@
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/appbar_general"
+    android:id="@+id/appbar_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:elevation="@dimen/elevation_appbar"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:transitionName="@string/shared_transition_toolbar">
-
+    app:elevation="0dp"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/toolbar_gradient"
+        android:background="@color/new_design_blue"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-    <include layout="@layout/toolbar_progressbar"/>
+    <include layout="@layout/toolbar_progressbar" />
 
 </com.google.android.material.appbar.AppBarLayout>
