--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
@@ -22,11 +22,13 @@
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.design.widget.CollapsingToolbarLayout
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 app:contentScrim="?colorPrimary"
+                app:expandedTitleTextAppearance="@android:color/transparent"
+                app:titleEnabled="false"
                 app:layout_scrollFlags="exitUntilCollapsed|scroll">
 
                 <LinearLayout
@@ -41,6 +43,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="60dp"
                         android:gravity="center_vertical">
 
                         <ImageView
@@ -196,14 +199,14 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="DFID 31 district retrofitting is the projects you"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/more"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                     </LinearLayout>
 
@@ -233,15 +236,14 @@
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-            </android.support.design.widget.CollapsingToolbarLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-
-            <android.support.design.widget.TabLayout
+            <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabs"
-                android:layout_width="fill_parent"
-                android:layout_height="35dp"
-                android:background="@color/colorPrimaryDark"
-                app:tabIndicatorColor="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@android:color/white"
+                app:tabIndicatorColor="@color/new_design_blue"
                 app:tabIndicatorHeight="2dp"
                 app:tabMode="scrollable"
                 app:tabSelectedTextColor="@android:color/white"
