tab bar gravity fixed

--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
@@ -246,7 +246,7 @@
                 app:tabIndicatorColor="@color/new_design_blue"
                 app:tabIndicatorHeight="2dp"
                 app:tabGravity="fill"
-                app:tabMode="fixed"
+                app:tabMode="scrollable"
                 app:tabSelectedTextColor="@color/new_design_blue"
                 app:tabTextColor="@color/text_primary" />
 
